syntax = "proto3";

option go_package = "github.com/silent-observer/go-tickets/proto";

package proto;

message BoardId {
    uint64 id = 1;
}
