syntax = "proto3";

option go_package = "github.com/silent-observer/go-tickets/proto/tickets";

package tickets;

message ProjectId {
    string id = 1;
}